test/success/integration/_succ_expr_plus_1.hs
x :: Double
x = 4.0 + 3.5
main = print x