test/fail/integration/_fail_sem_expr_times_3.hs
x :: Double
x = 4 * 3.5
main = print "hello"